# progM11S3

./: README.md  app.py  docker-compose.yml  pyproject.toml  test-minio.py
data_pipeline/: clickhouse_client.py  data_processing.py  minio_client.py
sql/: create_table.sql
