[tool.poetry]
name = "data-pipeline"
version = "0.1.0"
description = ""
authors = ["Livia Coutinho <99189965+Livia-Coutinho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
minio = "^7.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
